ProTrekkr releases history
===============================================================================

v2.7.0

- Copy buffers icons weren't updated properly when selected with keyboard.
- Added OpenGL support (especially for slower systems).
- Fixed a nasty regression bug in log & pow functions.
- Various bugs fixed here and there.

v2.6.7

- Fixed a crash when using rand functions on synth oscs & lfos under Linux.
- Added a replay routine for the PlayStation Vita.
- Fixed a crash when loading older NoiseTrekker modules.
- Startup splash screen is now optional.

v2.6.6

- Doesn't actualize UI from audio thread anymore (which fixed a few issues).
- Fixed the 303 units note off bug.
- Added a function to swap two instruments in the patterns.
- Refactored a lot of the code.

v2.6.5

- Added handling for 512 midi patches via bank selection.
- Fixed a couple of bugs in the standalone replay.
- Added effects 3F & 40 to set the scale of the two 303 units.
- The file keyboards.txt was missing from the repository.
- Added effects 29, 2A & 2B to turn tracks compressor on/off,
  set compression threshold & ratio respectively.
- Fixed the audio bug on Intel Macs.

v2.6.4

- Slightly revised manual.
- Window now opens at the center of the screen.
- Window size is now remembered when switching back from full screen.
- Added an option to reload last used ptk at startup.
- Removed the custom mouse pointer in all versions except Mac OSX.

v2.6.3

- Fixed a small bug in synth params.
- Added some modules.

v2.6.2

- LCTRL+LSHIFT+F (or right mouse button on icon):
  Fill a block according to the current step add.
- LCTRL+LSHIFT+R (or right mouse button on icon):
  Randomize a block according to the current step add.
- .wav are now saved in samples directory.
- Correct size/time is reported after rendering to a mono sample.

v2.6.1

- Fixed a possible endless loop in wav renderizer.
- Selecting a track or a pattern with LCTRL+A or LCTRL+SHIFT+A
  selected a row too much.

v2.6.0
