@@ -116,7 +116,7 @@
 #define GUI_CMD_SWITCH_TRACK_LARGE_STATE 75
 #define GUI_CMD_SWITCH_TRACK_SMALL_STATE 76
 
-#define GUI_CMD_EXPORT_WAV 77
+#define GUI_CMD_EXPORT_WHOLE_WAV 77
 
 #define GUI_CMD_SET_FILES_LIST_PLAY_WAV 78
 
@@ -127,6 +127,9 @@
 
 #define GUI_CMD_REDUCE_TRACK_EFFECTS 82
 #define GUI_CMD_EXPAND_TRACK_EFFECTS 83
+
+#define GUI_CMD_EXPORT_SEL_WAV 84
+#define GUI_CMD_EXPORT_LOOP_WAV 85
 
 #define GUI_CMD_FILELIST_SCROLL 100
 #define GUI_CMD_UPDATE_LOOP_EDITOR_ED 101
